syntax = "proto3";

package phoenix.v1;

option go_package = "github.com/phoenix/platform/pkg/api/v1;v1";

import "google/protobuf/timestamp.proto";

// GeneratorService manages configuration generation
service GeneratorService {
  // Generate a configuration for an experiment
  rpc GenerateConfiguration(GenerateConfigurationRequest) returns (GenerateConfigurationResponse);
  
  // Validate a configuration
  rpc ValidateConfiguration(ValidateConfigurationRequest) returns (ValidateConfigurationResponse);
  
  // Get a template by name
  rpc GetTemplate(GetTemplateRequest) returns (GetTemplateResponse);
  
  // List available templates
  rpc ListTemplates(ListTemplatesRequest) returns (ListTemplatesResponse);
  
  // Create a new template
  rpc CreateTemplate(CreateTemplateRequest) returns (CreateTemplateResponse);
  
  // Update an existing template
  rpc UpdateTemplate(UpdateTemplateRequest) returns (UpdateTemplateResponse);
  
  // Delete a template
  rpc DeleteTemplate(DeleteTemplateRequest) returns (DeleteTemplateResponse);
}

// Template represents a configuration template
message Template {
  string name = 1;
  string description = 2;
  string content = 3;
  string version = 4;
  map<string, string> default_parameters = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// Request/Response messages
message GenerateConfigurationRequest {
  string experiment_id = 1;
  string template = 2;
  map<string, string> parameters = 3;
}

message GenerateConfigurationResponse {
  string config_id = 1;
  string configuration = 2;
  string version = 3;
  google.protobuf.Timestamp generated_at = 4;
}

message ValidateConfigurationRequest {
  string configuration = 1;
}

message ValidateConfigurationResponse {
  bool valid = 1;
  repeated ValidationError errors = 2;
}

message ValidationError {
  string field = 1;
  string message = 2;
}

message GetTemplateRequest {
  string name = 1;
}

message GetTemplateResponse {
  Template template = 1;
}

message ListTemplatesRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListTemplatesResponse {
  repeated Template templates = 1;
  string next_page_token = 2;
}

message CreateTemplateRequest {
  Template template = 1;
}

message CreateTemplateResponse {
  Template template = 1;
}

message UpdateTemplateRequest {
  string name = 1;
  Template template = 2;
}

message UpdateTemplateResponse {
  Template template = 1;
}

message DeleteTemplateRequest {
  string name = 1;
}

message DeleteTemplateResponse {
  // Empty for now
}